--- a/client/src/components/WordExplorer/addtolist.css
+++ b/client/src/components/WordExplorer/addtolist.css
@@ -20,6 +20,7 @@
   text-align: center;
   font-style: italic;
   color: #211C20;
+  text-decoration: underline;
 }
 
 .word-name-header {
